--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 14:05:16 2018</p>
+         Last Run: Tue Jul 10 15:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Mostly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>24</td>
-                        <td>61</td>
+                        <td>20</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>24</td>
-                        <td>63</td>
+                        <td>16</td>
+                        <td>62</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>NW</td>
-                        <td>64</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>63</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,8 +170,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "24",
+                 "20",
+                 "16",
                  "24"
                ]
              },
@@ -180,8 +180,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "63",
+                 "58",
+                 "62",
                  "67"
                ]
              },
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "64",
-                 "63"
+                 "75",
+                 "65",
+                 "70"
                ]
              }
            ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 14:05:16 2018</p>
+         Last Run: Tue Jul 10 15:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -231,27 +231,27 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>4</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>27</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>Partly Cloudy</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
                         <td>30</td>
                         <td>2</td>
                         <td>10</td>
-                        <td>S</td>
-                        <td>24</td>
+                        <td>SSW</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -259,11 +259,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>SSE</td>
-                        <td>11</td>
+                        <td>10</td>
+                        <td>S</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -271,11 +271,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>1</td>
-                        <td>36</td>
+                        <td>34</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SSE</td>
-                        <td>5</td>
+                        <td>S</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -283,11 +283,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SE</td>
-                        <td>1</td>
+                        <td>SSE</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -334,7 +334,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "26",
-                 "26",
+                 "25",
                  "25",
                  "24",
                  "22"
@@ -347,7 +347,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "26",
-                 "26",
+                 "25",
                  "25",
                  "24",
                  "22"
@@ -415,11 +415,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
+                 "32",
                  "30",
-                 "31",
-                 "36",
-                 "44"
+                 "30",
+                 "34",
+                 "42"
                ]
              },
              {
@@ -427,11 +427,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "24",
-                 "11",
-                 "5",
-                 "1"
+                 "31",
+                 "34",
+                 "19",
+                 "12",
+                 "7"
                ]
              }
            ]
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 14:05:16 2018</p>
+         Last Run: Tue Jul 10 15:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -470,62 +470,62 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Chance of Rain</td>
-                        <td>10</td>
-                        <td>10</td>
-                        <td>63</td>
-                        <td>81</td>
-                        <td>1</td>
-                        <td>19</td>
+                        <td>11</td>
+                        <td>11</td>
+                        <td>46</td>
+                        <td>75</td>
+                        <td>2</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>96</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Chance of Rain</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>61</td>
-                        <td>74</td>
-                        <td>2</td>
-                        <td>18</td>
+                        <td>45</td>
+                        <td>67</td>
+                        <td>4</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>95</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>13</td>
-                        <td>13</td>
-                        <td>38</td>
-                        <td>64</td>
-                        <td>3</td>
-                        <td>19</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>36</td>
+                        <td>57</td>
+                        <td>5</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>93</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
-                        <td>14</td>
-                        <td>14</td>
+                        <td>Mostly Cloudy</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>24</td>
-                        <td>61</td>
-                        <td>3</td>
-                        <td>18</td>
+                        <td>52</td>
+                        <td>5</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>92</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>20</td>
+                        <td>51</td>
+                        <td>5</td>
                         <td>14</td>
-                        <td>14</td>
-                        <td>21</td>
-                        <td>60</td>
-                        <td>3</td>
-                        <td>18</td>
                         <td>NNW</td>
-                        <td>94</td>
+                        <td>84</td>
                      </tr>
                   </tbody>
                </table>
@@ -571,11 +571,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "10",
+                 "11",
                  "12",
-                 "13",
                  "14",
-                 "14"
+                 "15",
+                 "16"
                ]
              },
              {
@@ -584,11 +584,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "10",
+                 "11",
                  "12",
-                 "13",
                  "14",
-                 "14"
+                 "15",
+                 "16"
                ]
              }
            ]
@@ -641,11 +641,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "63",
-                 "61",
-                 "38",
+                 "46",
+                 "45",
+                 "36",
                  "24",
-                 "21"
+                 "20"
                ]
              },
              {
@@ -653,11 +653,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "74",
-                 "64",
-                 "61",
-                 "60"
+                 "75",
+                 "67",
+                 "57",
+                 "52",
+                 "51"
                ]
              },
              {
@@ -665,11 +665,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
-                 "95",
-                 "93",
-                 "92",
-                 "94"
+                 "87",
+                 "72",
+                 "62",
+                 "66",
+                 "84"
                ]
              }
            ]
@@ -686,7 +686,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 14:05:16 2018</p>
+         Last Run: Tue Jul 10 15:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -715,7 +715,7 @@
                         <td>2</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -723,7 +723,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>3</td>
                         <td>13</td>
                         <td>SW</td>
@@ -737,7 +737,7 @@
                         <td>0</td>
                         <td>40</td>
                         <td>4</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSW</td>
                         <td>8</td>
                      </tr>
@@ -892,7 +892,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "46",
+                 "47",
                  "40",
                  "34",
                  "32"
@@ -903,7 +903,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
+                 "10",
                  "10",
                  "8",
                  "8",
@@ -924,7 +924,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 14:05:16 2018</p>
+         Last Run: Tue Jul 10 15:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
