--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 15:05:24 2018</p>
+         Last Run: Tue Jul 10 16:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 10, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Mostly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>20</td>
+                        <td>23</td>
                         <td>58</td>
                         <td>1</td>
-                        <td>19</td>
-                        <td>NW</td>
-                        <td>75</td>
+                        <td>16</td>
+                        <td>WNW</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>16</td>
+                        <td>13</td>
                         <td>62</td>
                         <td>0</td>
                         <td>19</td>
                         <td>NW</td>
-                        <td>65</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>24</td>
-                        <td>67</td>
+                        <td>13</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>NW</td>
-                        <td>70</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "20",
-                 "16",
-                 "24"
+                 "23",
+                 "13",
+                 "13"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "data":[
                  "58",
                  "62",
-                 "67"
+                 "65"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "65",
-                 "70"
+                 "79",
+                 "67",
+                 "65"
                ]
              }
            ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 15:05:24 2018</p>
+         Last Run: Tue Jul 10 16:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -244,14 +244,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
                         <td>30</td>
                         <td>2</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>34</td>
+                        <td>S</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -261,8 +261,8 @@
                         <td>0</td>
                         <td>30</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>S</td>
+                        <td>11</td>
+                        <td>SSE</td>
                         <td>19</td>
                      </tr>
                      <tr>
@@ -334,7 +334,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "26",
-                 "25",
+                 "26",
                  "25",
                  "24",
                  "22"
@@ -347,7 +347,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "26",
-                 "25",
+                 "26",
                  "25",
                  "24",
                  "22"
@@ -428,7 +428,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "31",
-                 "34",
+                 "33",
                  "19",
                  "12",
                  "7"
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 15:05:24 2018</p>
+         Last Run: Tue Jul 10 16:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -686,7 +686,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 15:05:24 2018</p>
+         Last Run: Tue Jul 10 16:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -708,14 +708,14 @@
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>14</td>
-                        <td>14</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>2</td>
-                        <td>11</td>
-                        <td>SW</td>
-                        <td>10</td>
+                        <td>13</td>
+                        <td>SSW</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -723,47 +723,47 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>3</td>
                         <td>13</td>
-                        <td>SW</td>
-                        <td>10</td>
+                        <td>SSW</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>4</td>
-                        <td>11</td>
-                        <td>SSW</td>
-                        <td>8</td>
+                        <td>14</td>
+                        <td>S</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>6</td>
-                        <td>11</td>
-                        <td>SSW</td>
-                        <td>8</td>
+                        <td>13</td>
+                        <td>S</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>14</td>
                         <td>S</td>
-                        <td>9</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -809,11 +809,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "14",
+                 "15",
                  "17",
-                 "18",
-                 "20",
-                 "21"
+                 "19",
+                 "21",
+                 "22"
                ]
              },
              {
@@ -822,11 +822,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "14",
+                 "15",
                  "17",
-                 "18",
-                 "20",
-                 "21"
+                 "19",
+                 "21",
+                 "22"
                ]
              }
            ]
@@ -891,11 +891,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "47",
-                 "40",
-                 "34",
-                 "32"
+                 "55",
+                 "46",
+                 "41",
+                 "35",
+                 "33"
                ]
              },
              {
@@ -903,11 +903,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "10",
-                 "8",
-                 "8",
-                 "9"
+                 "4",
+                 "3",
+                 "3",
+                 "3",
+                 "6"
                ]
              }
            ]
@@ -924,7 +924,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 10 15:05:24 2018</p>
+         Last Run: Tue Jul 10 16:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -949,11 +949,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>25</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -964,8 +964,8 @@
                         <td>30</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>SE</td>
-                        <td>23</td>
+                        <td>ESE</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -976,8 +976,8 @@
                         <td>35</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>SE</td>
-                        <td>19</td>
+                        <td>ESE</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -1095,7 +1095,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "27",
+                 "26",
                  "30",
                  "35"
                ]
@@ -1105,9 +1105,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "25",
-                 "23",
-                 "19"
+                 "18",
+                 "17",
+                 "16"
                ]
              }
            ]
